# AutoLEE_Control_System

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_deploy.sh  run.sh
data/: Delta.txt  ZMP.txt  ZMP_ref.txt  ft1_data.txt  position_target.txt  time.txt  torque.txt
demo/: main.cpp
include/: BusCommunication.h  HYYRobotInterface.h
include/Base/: RobotSystem.h  metaType.h  robotStruct.h
include/DeviceDriver/: device_interface.h
include/EGM/: egm_interface.h
include/Model/: DynamicsInterface.h  KinematicInterface.h
include/Move/: Communication.h  JointSensorForceControl.h  MovePlan.h  SafeAreas.h  SensorForceControl.h
include/Sensor/: torqueSensor_interface.h
include/Teach/: robot_teach_interface.h
include/Technology/stack/: StackInterface.h
include/Tool/: filter_interface.h
lib/: libxml2.la
lib/cmake/eigenpy/: eigenpyConfig.cmake  eigenpyConfigVersion.cmake
lib/cmake/hpp-fcl/: hpp-fclConfig.cmake  hpp-fclConfigVersion.cmake  hpp-fclTargets-release.cmake  hpp-fclTargets.cmake
lib/cmake/pinocchio/: pinocchioTargets-release.cmake  pinocchioTargets.cmake
lib/pkgconfig/: eigenpy.pc  hpp-fcl.pc  pinocchio.pc
src/: RobotSystem.cpp  RobotSystem.h
src/Common/: CommonTypes.h  tools.cpp  tools.h
src/Log/: Logger.cpp  Logger.h
src/RLModel/: RLModel.cpp  RLModel.h
src/RobotCommunication/: RobotCommunication.cpp  RobotCommunication.h
src/RobotController/: RLRobotController.cpp  RLRobotController.h  RLZMPRobotController.cpp  RLZMPRobotController.h  RobotController.h
src/demo/: main.cpp
